packages/svelte/tests/validator/samples/attribute-unique-allowed/input.svelte
<div color="red" style:color="red" class:color={true} ></div>