packages/svelte/tests/compiler-errors/samples/empty-classname-binding/main.svelte
<h1 class:={true}>Hello</h1>
